fem refactored and extended for native methods